this is my portfolio page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <navbar class="nav">
         <div class="navd">
-            <img src="l1.png" id="image1">
+            <img src="./images/l1.png" id="image1">
             <ul id="navin">
                 <button id="btnin" onclick="more()">&#916</button>
                 <li><a href="#Home" class="active">Home</a></li>
@@ -25,11 +25,9 @@
     </navbar>
     <section id="Home">
         <div class="intro">
-            <img src="codergif.gif" alt="my photo">
+            <img src="./images/codergif.gif" alt="my photo">
             <span><b>Hello everyone</b></span><span id="dot">...</span><span
-                id="read">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, repudiandae repellendus soluta
-                ut magni odio dicta quos nostrum voluptatibus aut est explicabo fugiat dolorem eaque asperiores earum,
-                ducimus sequi omnis? Minus, in!</span>
+                id="read">My self Harsh Chauhan I am a programmer ,I am in my second year of b-tech</span>
             <button id="less-more" onclick="lessmore()">Read More</button>
         </div>
         <div class="angle-down-icon">
@@ -45,8 +43,8 @@
         <div id="aboutpage">
         
         <div id="animation">
-            <a ><img src="WIN_20220130_20_25_19_Pro.jpg" id="coder"></a>
-            <span>Hey there!! MY self Harsh Chauhan And I want to share my achivements with you </span>
+            <a ><img src="./images/WIN_20220130_20_25_19_Pro.jpg" id="coder"></a>
+            <span>Hey there!! MY self Harsh Chauhan And I want to share my Skills with you </span>
         </div>
         <div class="aboutdiv">
             <div class="rank">
@@ -82,9 +80,9 @@
     </section>
     <section id="social">
         <div class="handles">
-            <div class="so"><a href="https://instagram.com" target="_blank"><img src="instagram.webp" alt="Relaode img"></a></div>
-            <div class="so"><a href="https://facebook.com" target="_blank"><img src="facebook.png" alt="Relaode img"></a></div>
-            <div class="so"><a href="https://linkedin.com" target="_blank"><img src="LI-In-Bug.png" alt="Relaode img"></a></div>
+            <div class="so"><a href="https://instagram.com" target="_blank"><img src="./images/instagram.webp" alt="Relaode img"></a></div>
+            <div class="so"><a href="https://facebook.com" target="_blank"><img src="./images/facebook.png" alt="Relaode img"></a></div>
+            <div class="so"><a href="https://linkedin.com" target="_blank"><img src="./images/LI-In-Bug.png" alt="Relaode img"></a></div>
             <div class="so" ><a href="#" target="_blank" ><img src="" alt="Relaode img"></a></div>
         </div>
     </section>
