This my portfolio

--- a/index.html
+++ b/index.html
@@ -57,24 +57,30 @@
             </div>
             <div class="rank">
                 <div class="lang"></div>
-                <p>Web development</p>
-            </div>
-            <div class="rank">
-                <div class="lang"></div>
-                <p>DSA
-                </p>
-            </div>
-            <div class="rank">
-                <div class="lang"></div>
-                <p>DSA
-                </p>
-            </div>
-            <div class="rank">
-                <div class="lang"></div>
                 
                 <p>DSA
                 </p>
             </div>
+            <div class="rank">
+                <div class="lang"></div>
+                <p>HTML</p>
+            </div>
+            <div class="rank">
+                <div class="lang"></div>
+                <p>CSS
+                </p>
+            </div>
+            <div class="rank">
+                <div class="lang"></div>
+                <p>Java Script
+                </p>
+            </div>
+            <div class="rank">
+                <div class="lang"></div>
+                <p>React Js
+                </p>
+            </div>
+
         </div>
         </div>
     </section>
