--- a/index.html
+++ b/index.html
@@ -48,35 +48,35 @@
         </div>
         <div class="aboutdiv">
             <div class="rank">
-                <div class="lang"></div>
+                <div class="lang" id="skill1"></div>
                 <p>C++</p>
             </div>
             <div class="rank">
-                <div class="lang"></div>
+                <div class="lang" id="skill2"></div>
                 <p>C</p>
             </div>
             <div class="rank">
-                <div class="lang"></div>
+                <div class="lang" id="skill3"></div>
                 
                 <p>DSA
                 </p>
             </div>
             <div class="rank">
-                <div class="lang"></div>
+                <div class="lang" id="skill4"></div>
                 <p>HTML</p>
             </div>
             <div class="rank">
-                <div class="lang"></div>
+                <div class="lang" id="skill5"></div>
                 <p>CSS
                 </p>
             </div>
             <div class="rank">
-                <div class="lang"></div>
+                <div class="lang" id="skill6"></div>
                 <p>Java Script
                 </p>
             </div>
             <div class="rank">
-                <div class="lang"></div>
+                <div class="lang" id="skill7"></div>
                 <p>React Js
                 </p>
             </div>
@@ -95,6 +95,7 @@
 
 
 </body>
+<script src="https://kit.fontawesome.com/3682bc7295.js" crossorigin="anonymous"></script>
 <script src="./Portfilo.js">
 </script>
 
