--- a/index.html
+++ b/index.html
@@ -85,11 +85,29 @@
         </div>
     </section>
     <section id="social">
-        <div class="handles">
-            <div class="so"><a href="https://instagram.com" target="_blank"><img src="./images/instagram.webp" alt="Relaode img"></a></div>
+        <!-- <div class="handles">
+             <div class="so"><a href="https://instagram.com" target="_blank"><img src="./images/instagram.webp" alt="Relaode img"></a></div>
             <div class="so"><a href="https://facebook.com" target="_blank"><img src="./images/facebook.png" alt="Relaode img"></a></div>
             <div class="so"><a href="https://linkedin.com" target="_blank"><img src="./images/LI-In-Bug.png" alt="Relaode img"></a></div>
-            <div class="so" ><a href="#" target="_blank" ><img src="" alt="Relaode img"></a></div>
+            <div class="so" ><a href="#" target="_blank" ><img src="" alt="Relaode img"></a></div> 
+            
+            <h2>These are contact handles</h2>
+                        <a href="https://facebook.com/avohq" class="social-link"><img src="https://uploads-ssl.webflow.com/5ec440af4659932990a1020c/60f17a27f09c3f7722f7ef58_icon%20(2).svg" loading="lazy" alt="Facebook logo"/></a>
+                        <a href="https://twitter.com/avohq" class="social-link"><img src="https://uploads-ssl.webflow.com/5ec440af4659932990a1020c/60f17a27f09c3fa670f7ef56_icon%20(4).svg" loading="lazy" alt="Twitter logo" /></a>
+        </div> -->
+        <div class="footer">
+            <div class="wraped-over">
+                <div class="footerbody">
+                    <h2>These are contact handles</h2>
+                    <a href="/" class="social-link"><img src="https://uploads-ssl.webflow.com/5ec440af4659932990a1020c/60f17a27f09c3f7722f7ef58_icon%20(2).svg" loading="lazy" alt="Facebook logo"/></a>
+                    <a href="/" class="social-link"><img src="https://uploads-ssl.webflow.com/5ec440af4659932990a1020c/60f17a27f09c3fa670f7ef56_icon%20(4).svg" loading="lazy" alt="Twitter logo" /></a>
+                   
+                <a href="https://www.linkedin.com/in/harsh-chauhan-0a34b01a0" class="social-link"><img src="https://uploads-ssl.webflow.com/5ec440af4659932990a1020c/60f17a27f09c3f1f0df7ef59_icon%20(1).svg" loading="lazy" alt="LinkedIn logo"/></a>
+                <a href="https://www.linkedin.com/in/harsh-chauhan-0a34b01a0" class="social-link git"><img src="" loading="lazy" /><i class="fa-brands fa-github"></i></a>
+                <a href="https://instagram.com/hharshchauhan1?igshid=ZDdkNTZiNTM=" class="social-link"><img src="https://uploads-ssl.webflow.com/5ec440af4659932990a1020c/60f17a27f09c3f768ef7ef57_icon%20(3).svg" loading="lazy" alt="Instagram logo"/></a>
+            </div>
+            <img src="https://uploads-ssl.webflow.com/5ec440af4659932990a1020c/6126238e144f7970c00d7c57_60f17a27f09c3f9cecf7ef53_footer-avatar.png" loading="lazy" width="281" alt="The Avo mascot on a boat holding a flag saying &quot;SHIP IT!&quot;" class="footer-avatar" />
+        </div>
         </div>
     </section>
 
