Added projects field change 2

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="intro">
             <img src="./images/codergif.gif" alt="my photo">
             <span><b>Hello everyone</b></span><span id="dot">...</span><span
-                id="read">My self Harsh Chauhan I am a programmer ,I am in my second year of b-tech</span>
+                id="read">My self Harsh Chauhan I am a programmer and I am in my second year of b-tech</span>
             <button id="less-more" onclick="lessmore()">Read More</button>
         </div>
         <div class="angle-down-icon">
