--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="description">
                 <h3>Inotebook:</h3>
                 <p>This is a app which keeps your notes safe no one can read it </p>
-                <p>Tools used:React,CSS,Express,nodejs,Mongodb</p>
+                <p>Tools used-React,CSS,Express,nodejs,Mongodb</p>
                 <a href="https://github.com/HarshProj">
                     <span>Github repo</span>
                 </a>
@@ -105,7 +105,7 @@
             <div class="description">
                 <h3>Tech-Blog:</h3>
                 <p>This is a blog which gives you info about accesories,daily tech news and technology in past </p>
-                <p>Tools used:React,CSS,Express,nodejs,Mongodb</p>
+                <p>Tools used-React,CSS,Express,nodejs,Mongodb</p>
                 <a href="https://github.com/HarshProj/Mini_Projects.git">
                     <span>Github repo</span>
                 </a>
@@ -116,7 +116,7 @@
             <div class="description">
                 <h3>Text-Utills:</h3>
                 <p>This is a app which can modify your intered text like:converting to uppercase,loweercase etc</p>
-                <p>Tools used:React,CSS,Express,nodejs,Mongodb</p>
+                <span class="projtool">Tools used-React,CSS,Express,nodejs,Mongodb</span>
                 <a href="https://github.com/HarshProj/TextUtils.git">
                     <span>Github repo</span>
                 </a>
@@ -127,7 +127,7 @@
             <div class="description">
                 <h3>Weather-app:</h3>
                 <p>It gives you weather detail of any entered site</p>
-                <p>Tools used:Html,Css,Javascript</p>
+                <p>Tools used-Html,Css,Javascript</p>
                 <a href="https://github.com/HarshProj/Weather-website.git">
                     <span>Github repo</span>
                 </a>
@@ -138,7 +138,7 @@
             <div class="description">
                 <h3>Mini-projects:</h3>
                 <p>It contains collection of my mini projects</p>
-                <p>Tools used:Html,Css,Javascript</p>
+                <p>Tools used-Html,Css,Javascript</p>
                 <a href="https://github.com/HarshProj/Mini_Projects.git">
                     <span>Github repo</span>
                 </a>
